[package]
name = "bdk_testenv"
version = "0.13.1"
edition = "2021"
rust-version = "1.85.0"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk"
documentation = "https://docs.rs/bdk_testenv"
description = "Testing framework for BDK chain sources."
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
bdk_chain = { path = "../chain", version = "0.23.1", default-features = false }
electrsd = { version = "0.36.1", features = [ "legacy" ], default-features = false }
bitcoin = { version = "0.32.0", default-features = false }

[dev-dependencies]
bdk_testenv = { path = "." }

[features]
default = ["std", "download"]
download = ["electrsd/corepc-node_28_2", "electrsd/esplora_a33e97e1"]
std = ["bdk_chain/std", "bitcoin/rand-std"]
serde = ["bdk_chain/serde"]

[package.metadata.docs.rs]
no-default-features = true
