[package]
name = "example_cbf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk_cbf = { path = "../../crates/bdk_cbf"}
bdk_chain = { path = "../../crates/chain"}
example_cli = { path = "../example_cli" }
