[package]
name = "example_cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk_chain = { path = "../../crates/chain", features = ["serde", "miniscript"]}
bdk_coin_select = "0.3.0"
bdk_file_store = { path = "../../crates/file_store" }
bitcoin = { version = "0.32.0", features = ["base64"], default-features = false }
psbt-v0 = { path = "/home/tobin/build/github.com/tcharding/rust-psbt-v0/master", version = "0.1.0", features = ["miniscript", "base64"], default-features = false }

anyhow = "1"
clap = { version = "3.2.23", features = ["derive", "env"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
